--- a/sobre-magnetica.html
+++ b/sobre-magnetica.html
@@ -266,7 +266,7 @@
         <p>
           Holis! Mi nombre es Sofi, hoy quiero invitarte a que conozcas una
           partecita de mi mundo, uno de mis lugares favoritos, mi agencia
-          magnética. Creada con mucho amor, pasión y esmero.
+          Magnética. Creada con mucho amor, pasión y esmero.
         </p>
         <p>
           Este espacio es el indicado si estás buscando potenciar cualquier tipo
@@ -292,9 +292,9 @@
         </p>
         <p>
           Fue creada para empoderar. Desde que comencé en mi camino como
-          emprendedora creí fielmente en que una persona debe crecer en varios
+          emprendedora, creí fielmente en que una persona debe crecer en varios
           aspectos para que su proyecto también pueda crecer. Por eso dedico una
-          gran parte de mi y mi contenido en aportar, se que hasta las cosas que
+          gran parte de mí y mi contenido en aportar, sé que hasta las cosas que
           parecen simples o pequeñas pueden generar grandes cambios en la vida
           de una persona.
         </p>
