--- a/redes-sociales.html
+++ b/redes-sociales.html
@@ -451,12 +451,12 @@
               <div class="swiper-slide">
                 <div class="portfolio-card">
                   <a
-                    href="assets/img/portfolios/proyecto-agosto/PROYECTOAgosto2023_page-0001.jpg"
+                    href="assets/img/portfolios/proyecto-agosto/PROYECTOAgosto2023_page-0001.webp"
                     data-gallery="portfolioGallery"
                     class="portfolio-lightbox preview-link"
                   >
                     <img
-                      src="assets/img/portfolios/proyecto-agosto/PROYECTOAgosto2023_page-0001.jpg"
+                      src="assets/img/portfolios/proyecto-agosto/PROYECTOAgosto2023_page-0001.webp"
                       alt=""
                     />
                     <div class="portfolio-profile-text">
@@ -466,41 +466,42 @@
                       </p>
                     </div>
                     <a
-                    href="assets/img/portfolios/proyecto-agosto/PROYECTOAgosto2023_page-0002.jpg"
+                    href="assets/img/portfolios/proyecto-agosto/PROYECTOAgosto2023_page-0002.webp"
                     data-gallery="portfolioGallery"
                     class="portfolio-lightbox preview-link"
                   >
                   <a
-                    href="assets/img/portfolios/proyecto-agosto/PROYECTOAgosto2023_page-0003.jpg"
+                    href="assets/img/portfolios/proyecto-agosto/PROYECTOAgosto2023_page-0003.webp"
                     data-gallery="portfolioGallery"
                     class="portfolio-lightbox preview-link"
                   >
                   <a
-                    href="assets/img/portfolios/proyecto-agosto/PROYECTOAgosto2023_page-0004.jpg"
+                    href="assets/img/portfolios/proyecto-agosto/PROYECTOAgosto2023_page-0004.webp"
                     data-gallery="portfolioGallery"
                     class="portfolio-lightbox preview-link"
                   >
                   <a
-                    href="assets/img/portfolios/proyecto-agosto/PROYECTOAgosto2023_page-0005.jpg"
+                    href="assets/img/portfolios/proyecto-agosto/PROYECTOAgosto2023_page-0005.webp"
                     data-gallery="portfolioGallery"
                     class="portfolio-lightbox preview-link"
                   >
                   <a
-                    href="assets/img/portfolios/proyecto-agosto/PROYECTOAgosto2023_page-0006.jpg"
+                    href="assets/img/portfolios/proyecto-agosto/PROYECTOAgosto2023_page-0006.webp"
                     data-gallery="portfolioGallery"
                     class="portfolio-lightbox preview-link"
                   >
+                  </a>
                 </div>
               </div>
 
               <div class="swiper-slide">
                 <div class="portfolio-card">
                   <a
-                    href="assets/img/portfolios/basta-de-excusas/PROYECTO Basta de excusas FITNESKING4_page-0001.jpg"
+                    href="assets/img/portfolios/basta-de-excusas/PROYECTO Basta de excusas FITNESKING4_page-0001.webp"
                     data-gallery="portfolio2Gallery"
                     class="portfolio-lightbox preview-link"
                   >
-                    <img src="assets/img/portfolios/basta-de-excusas/PROYECTO Basta de excusas FITNESKING4_page-0001.jpg" alt="" />
+                    <img src="assets/img/portfolios/basta-de-excusas/PROYECTO Basta de excusas FITNESKING4_page-0001.webp" alt="" />
                     <div class="portfolio-profile-text">
                       <h3 class="portfolio-title">Fitnessking</h3>
                       <p class="portfolio-text">
@@ -508,32 +509,32 @@
                       </p>
                     </div>
                     <a
-                    href="assets/img/portfolios/basta-de-excusas/PROYECTO Basta de excusas FITNESKING4_page-0002.jpg"
+                    href="assets/img/portfolios/basta-de-excusas/PROYECTO Basta de excusas FITNESKING4_page-0002.webp"
                     data-gallery="portfolio2Gallery"
                     class="portfolio-lightbox preview-link"
                   >
                   <a
-                    href="assets/img/portfolios/basta-de-excusas/PROYECTO Basta de excusas FITNESKING4_page-0003.jpg"
+                    href="assets/img/portfolios/basta-de-excusas/PROYECTO Basta de excusas FITNESKING4_page-0003.webp"
                     data-gallery="portfolio2Gallery"
                     class="portfolio-lightbox preview-link"
                   >
                   <a
-                    href="assets/img/portfolios/basta-de-excusas/PROYECTO Basta de excusas FITNESKING4_page-0004.jpg"
+                    href="assets/img/portfolios/basta-de-excusas/PROYECTO Basta de excusas FITNESKING4_page-0004.webp"
                     data-gallery="portfolio2Gallery"
                     class="portfolio-lightbox preview-link"
                   >
                   <a
-                    href="assets/img/portfolios/basta-de-excusas/PROYECTO Basta de excusas FITNESKING4_page-0005.jpg"
+                    href="assets/img/portfolios/basta-de-excusas/PROYECTO Basta de excusas FITNESKING4_page-0005.webp"
                     data-gallery="portfolio2Gallery"
                     class="portfolio-lightbox preview-link"
                   >
                   <a
-                    href="assets/img/portfolios/basta-de-excusas/PROYECTO Basta de excusas FITNESKING4_page-0006.jpg"
+                    href="assets/img/portfolios/basta-de-excusas/PROYECTO Basta de excusas FITNESKING4_page-0006.webp"
                     data-gallery="portfolio2Gallery"
                     class="portfolio-lightbox preview-link"
                   >
                   <a
-                    href="assets/img/portfolios/basta-de-excusas/PROYECTO Basta de excusas FITNESKING4_page-0007.jpg"
+                    href="assets/img/portfolios/basta-de-excusas/PROYECTO Basta de excusas FITNESKING4_page-0007.webp"
                     data-gallery="portfolio2Gallery"
                     class="portfolio-lightbox preview-link"
                   >
@@ -646,12 +647,12 @@
               <div class="swiper-slide">
                 <div class="portfolio-card">
                   <a
-                    href="assets/img/portfolios/portfolio-doctora/Identidad_LucíaSabbione_Médica_2023_page-0001.jpg"
+                    href="assets/img/portfolios/portfolio-doctora/Identidad_LucíaSabbione_Médica_2023_page-0001.webp"
                     data-gallery="portfolio5Gallery"
                     class="portfolio-lightbox preview-link"
                   >
                     <img
-                      src="assets/img/portfolios/portfolio-doctora/Identidad_LucíaSabbione_Médica_2023_page-0001.jpg"
+                      src="assets/img/portfolios/portfolio-doctora/Identidad_LucíaSabbione_Médica_2023_page-0001.webp"
                       alt=""
                     />
                     <div class="portfolio-profile-text">
@@ -662,62 +663,62 @@
                     </div>
                     
                     <a
-                    href="assets/img/portfolios/portfolio-doctora/Identidad_LucíaSabbione_Médica_2023_page-0002.jpg"
+                    href="assets/img/portfolios/portfolio-doctora/Identidad_LucíaSabbione_Médica_2023_page-0002.webp"
                     data-gallery="portfolio5Gallery"
                     class="portfolio-lightbox preview-link"
                   >
                   <a
-                    href="assets/img/portfolios/portfolio-doctora/Identidad_LucíaSabbione_Médica_2023_page-0003.jpg"
+                    href="assets/img/portfolios/portfolio-doctora/Identidad_LucíaSabbione_Médica_2023_page-0003.webp"
                     data-gallery="portfolio5Gallery"
                     class="portfolio-lightbox preview-link"
                   >
                   <a
-                    href="assets/img/portfolios/portfolio-doctora/Identidad_LucíaSabbione_Médica_2023_page-0004.jpg"
+                    href="assets/img/portfolios/portfolio-doctora/Identidad_LucíaSabbione_Médica_2023_page-0004.webp"
                     data-gallery="portfolio5Gallery"
                     class="portfolio-lightbox preview-link"
                   >
                   <a
-                    href="assets/img/portfolios/portfolio-doctora/Identidad_LucíaSabbione_Médica_2023_page-0005.jpg"
+                    href="assets/img/portfolios/portfolio-doctora/Identidad_LucíaSabbione_Médica_2023_page-0005.webp"
                     data-gallery="portfolio5Gallery"
                     class="portfolio-lightbox preview-link"
                   >
                   <a
-                    href="assets/img/portfolios/portfolio-doctora/Identidad_LucíaSabbione_Médica_2023_page-0006.jpg"
+                    href="assets/img/portfolios/portfolio-doctora/Identidad_LucíaSabbione_Médica_2023_page-0006.webp"
                     data-gallery="portfolio5Gallery"
                     class="portfolio-lightbox preview-link"
                   >
                   <a
-                    href="assets/img/portfolios/portfolio-doctora/Identidad_LucíaSabbione_Médica_2023_page-0007.jpg"
+                    href="assets/img/portfolios/portfolio-doctora/Identidad_LucíaSabbione_Médica_2023_page-0007.webp"
                     data-gallery="portfolio5Gallery"
                     class="portfolio-lightbox preview-link"
                   >
                   <a
-                    href="assets/img/portfolios/portfolio-doctora/Identidad_LucíaSabbione_Médica_2023_page-0008.jpg"
+                    href="assets/img/portfolios/portfolio-doctora/AnyConv.com__Identidad_LucíaSabbione_Médica_2023_page-0008.webp"
                     data-gallery="portfolio5Gallery"
                     class="portfolio-lightbox preview-link"
                   >
                   <a
-                    href="assets/img/portfolios/portfolio-doctora/Identidad_LucíaSabbione_Médica_2023_page-0009.jpg"
+                    href="assets/img/portfolios/portfolio-doctora/AnyConv.com__Identidad_LucíaSabbione_Médica_2023_page-0009.webp"
                     data-gallery="portfolio5Gallery"
                     class="portfolio-lightbox preview-link"
                   >
                   <a
-                    href="assets/img/portfolios/portfolio-doctora/Identidad_LucíaSabbione_Médica_2023_page-0010.jpg"
+                    href="assets/img/portfolios/portfolio-doctora/AnyConv.com__Identidad_LucíaSabbione_Médica_2023_page-0010.webp"
                     data-gallery="portfolio5Gallery"
                     class="portfolio-lightbox preview-link"
                   >
                   <a
-                    href="assets/img/portfolios/portfolio-doctora/Identidad_LucíaSabbione_Médica_2023_page-0011.jpg"
+                    href="assets/img/portfolios/portfolio-doctora/AnyConv.com__Identidad_LucíaSabbione_Médica_2023_page-0011.webp"
                     data-gallery="portfolio5Gallery"
                     class="portfolio-lightbox preview-link"
                   >
                   <a
-                    href="assets/img/portfolios/portfolio-doctora/Identidad_LucíaSabbione_Médica_2023_page-0012.jpg"
+                    href="assets/img/portfolios/portfolio-doctora/AnyConv.com__Identidad_LucíaSabbione_Médica_2023_page-0012.webp"
                     data-gallery="portfolio5Gallery"
                     class="portfolio-lightbox preview-link"
                   >
                   <a
-                    href="assets/img/portfolios/portfolio-doctora/Identidad_LucíaSabbione_Médica_2023_page-0013.jpg"
+                    href="assets/img/portfolios/portfolio-doctora/AnyConv.com__Identidad_LucíaSabbione_Médica_2023_page-0013.webp"
                     data-gallery="portfolio5Gallery"
                     class="portfolio-lightbox preview-link"
                   >
