cambio jpg a webp

--- a/diseño-grafico.html
+++ b/diseño-grafico.html
@@ -862,7 +862,7 @@
                     data-gallery="testimonioGallery"
                     class="portfolio-lightbox preview-link"
                   >
-                  <img src="assets/img/testimonios/Testimonio-Delia.webp" 
+                  <img src="assets/img/testimonios/Testimonio-Delia.png" 
                   class="zoom-imagen" 
                   alt="">
               </a>
@@ -873,7 +873,7 @@
                     data-gallery="testimonioGallery"
                     class="portfolio-lightbox preview-link"
                   >
-                  <img src="assets/img/testimonios/Testimonio-FrancoMai.webp" 
+                  <img src="assets/img/testimonios/Testimonio-FrancoMai.png" 
                   class="zoom-imagen"
                   alt="">
               </a>
@@ -886,7 +886,7 @@
                     data-gallery="testimonioGallery"
                     class="portfolio-lightbox preview-link"
                   >
-                  <img src="assets/img/testimonios/TestimonioCarenOrtiz.webp" 
+                  <img src="assets/img/testimonios/TestimonioCarenOrtiz.png" 
                   class="zoom-imagen" 
                   alt="">
               </a>
@@ -897,7 +897,7 @@
                   data-gallery="testimonioGallery"
                   class="portfolio-lightbox preview-link"
                 >
-                <img src="assets/img/testimonios/Testimonio-Delia.webp" 
+                <img src="assets/img/testimonios/Testimonio-Delia.png" 
                 class="zoom-imagen" 
                 alt="">
             </a>
@@ -923,7 +923,7 @@
                     class="portfolio-lightbox preview-link"
                   >
                   <img width="100%" height="100%" 
-                  src="assets/img/testimonios/Vlogcreandocontenidoenfitnesskig4.webp" 
+                  src="assets/img/testimonios/Vlogcreandocontenidoenfitnesskig4.png" 
                   class="zoom-imagen"
                   alt="">
                   </a>
@@ -937,7 +937,7 @@
                     class="portfolio-lightbox preview-link"
                   >
                   <img width="100%" height="100%" 
-                  src="assets/img/testimonios/Vlogcreandocontenidoenfitnesskig4.webp" 
+                  src="assets/img/testimonios/Vlogcreandocontenidoenfitnesskig4.png" 
                   class="zoom-imagen"
                   alt="">
                   </a>
@@ -951,7 +951,7 @@
                     class="portfolio-lightbox preview-link"
                   >
                   <img width="100%" height="100%" 
-                  src="assets/img/testimonios/Sin-título-2-[Recuperado].webp" 
+                  src="assets/img/testimonios/Sin-título-2-[Recuperado].png" 
                   class="zoom-imagen"
                   alt="">
                   </a>
@@ -965,7 +965,7 @@
                     class="portfolio-lightbox preview-link"
                   >
                   <img width="100%" height="100%" 
-                  src="assets/img/testimonios/Sin-título-2-[Recuperado].webp" 
+                  src="assets/img/testimonios/Sin-título-2-[Recuperado].png" 
                   class="zoom-imagen"
                   alt="">
                   </a>
