--- a/diseño-web.html
+++ b/diseño-web.html
@@ -677,7 +677,7 @@
                     data-gallery="testimonioGallery"
                     class="portfolio-lightbox preview-link"
                   >
-                  <img src="assets/img/testimonios/Testimonio-Delia.webp" 
+                  <img src="assets/img/testimonios/Testimonio-Delia.png" 
                   class="zoom-imagen" 
                   alt="">
               </a>
@@ -688,7 +688,7 @@
                     data-gallery="testimonioGallery"
                     class="portfolio-lightbox preview-link"
                   >
-                  <img src="assets/img/testimonios/Testimonio-FrancoMai.webp" 
+                  <img src="assets/img/testimonios/Testimonio-FrancoMai.png" 
                   class="zoom-imagen"
                   alt="">
               </a>
@@ -701,7 +701,7 @@
                     data-gallery="testimonioGallery"
                     class="portfolio-lightbox preview-link"
                   >
-                  <img src="assets/img/testimonios/TestimonioCarenOrtiz.webp" 
+                  <img src="assets/img/testimonios/TestimonioCarenOrtiz.png" 
                   class="zoom-imagen" 
                   alt="">
               </a>
@@ -712,7 +712,7 @@
                   data-gallery="testimonioGallery"
                   class="portfolio-lightbox preview-link"
                 >
-                <img src="assets/img/testimonios/Testimonio-Delia.webp" 
+                <img src="assets/img/testimonios/Testimonio-Delia.png" 
                 class="zoom-imagen" 
                 alt="">
             </a>
