--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
                     class="portfolio-lightbox preview-link"
                   >
                     <img
-                      src="assets/img/testimonios/Testimonio-FrancoMai.webp"
+                      src="assets/img/testimonios/Testimonio-FrancoMai.png"
                       class="zoom-imagen"
                       alt=""
                     />
@@ -541,7 +541,7 @@
                     class="portfolio-lightbox preview-link"
                   >
                     <img
-                      src="assets/img/testimonios/TestimonioCarenOrtiz.webp"
+                      src="assets/img/testimonios/TestimonioCarenOrtiz.png"
                       class="zoom-imagen"
                       alt=""
                     />
@@ -556,7 +556,7 @@
                     class="portfolio-lightbox preview-link"
                   >
                     <img
-                      src="assets/img/testimonios/Testimonio-Delia.webp"
+                      src="assets/img/testimonios/Testimonio-Delia.png"
                       class="zoom-imagen"
                       alt=""
                     />
@@ -571,7 +571,7 @@
                     class="portfolio-lightbox preview-link"
                   >
                     <img
-                      src="assets/img/testimonios/Testimonio-FrancoMai.webp"
+                      src="assets/img/testimonios/Testimonio-FrancoMai.png"
                       class="zoom-imagen"
                       alt=""
                     />
