--- a/diseño-grafico.html
+++ b/diseño-grafico.html
@@ -923,7 +923,7 @@
                     class="portfolio-lightbox preview-link"
                   >
                   <img width="100%" height="100%" 
-                  src="assets/img/testimonios/Vlogcreandocontenidoenfitnesskig4.png" 
+                  src="assets/img/testimonios/Vlogcreandocontenidoenfitnesskig4.webp" 
                   class="zoom-imagen"
                   alt="">
                   </a>
@@ -937,7 +937,7 @@
                     class="portfolio-lightbox preview-link"
                   >
                   <img width="100%" height="100%" 
-                  src="assets/img/testimonios/Vlogcreandocontenidoenfitnesskig4.png" 
+                  src="assets/img/testimonios/Vlogcreandocontenidoenfitnesskig4.webp" 
                   class="zoom-imagen"
                   alt="">
                   </a>
@@ -951,7 +951,7 @@
                     class="portfolio-lightbox preview-link"
                   >
                   <img width="100%" height="100%" 
-                  src="assets/img/testimonios/Sin-título-2-[Recuperado].png" 
+                  src="assets/img/testimonios/Sin-título-2-[Recuperado].webp" 
                   class="zoom-imagen"
                   alt="">
                   </a>
@@ -965,7 +965,7 @@
                     class="portfolio-lightbox preview-link"
                   >
                   <img width="100%" height="100%" 
-                  src="assets/img/testimonios/Sin-título-2-[Recuperado].png" 
+                  src="assets/img/testimonios/Sin-título-2-[Recuperado].webp" 
                   class="zoom-imagen"
                   alt="">
                   </a>
