ultimo cambio de imagenes

--- a/redes-sociales.html
+++ b/redes-sociales.html
@@ -748,7 +748,7 @@
                     data-gallery="testimonioGallery"
                     class="portfolio-lightbox preview-link"
                   >
-                  <img src="assets/img/testimonios/Testimonio-Delia.webp" 
+                  <img src="assets/img/testimonios/Testimonio-Delia.png" 
                   class="zoom-imagen" 
                   alt="">
               </a>
@@ -759,7 +759,7 @@
                     data-gallery="testimonioGallery"
                     class="portfolio-lightbox preview-link"
                   >
-                  <img src="assets/img/testimonios/Testimonio-FrancoMai.webp" 
+                  <img src="assets/img/testimonios/Testimonio-FrancoMai.png" 
                   class="zoom-imagen"
                   alt="">
               </a>
@@ -772,7 +772,7 @@
                     data-gallery="testimonioGallery"
                     class="portfolio-lightbox preview-link"
                   >
-                  <img src="assets/img/testimonios/TestimonioCarenOrtiz.webp" 
+                  <img src="assets/img/testimonios/TestimonioCarenOrtiz.png" 
                   class="zoom-imagen" 
                   alt="">
               </a>
@@ -783,7 +783,7 @@
                   data-gallery="testimonioGallery"
                   class="portfolio-lightbox preview-link"
                 >
-                <img src="assets/img/testimonios/Testimonio-Delia.webp" 
+                <img src="assets/img/testimonios/Testimonio-Delia.png" 
                 class="zoom-imagen" 
                 alt="">
             </a>
