--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <script src="assets/js/jquery-3.5.1.min.js"></script>
 
     <!-- Favicons -->
-    <link href="./assets/img/favicon-grande.webp" rel="icon" />
+    <link href="./assets/img/favicon-grande.png" rel="icon" />
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -426,8 +426,8 @@
                 <p>
                   El diseño que tu marca necesita para reflejar lo que te hace
                   único.
-                  <br>
-                  <br>
+                  <br />
+                  <br />
                 </p>
                 <a href="./diseño-grafico.html" class="readmore stretched-link"
                   >Read more <i class="bi bi-arrow-right"></i
@@ -465,8 +465,8 @@
                 <p>
                   Potencia, aumenta tu audiencia y crea una comunidad fiel en
                   redes.
-                  <br>
-                  <br>
+                  <br />
+                  <br />
                 </p>
                 <a href="./redes-sociales.html" class="readmore stretched-link"
                   >Read more <i class="bi bi-arrow-right"></i
@@ -484,8 +484,8 @@
                 <p>
                   Agenda una reunión con Sofi y define el camino de la
                   comunicación de tu proyecto.
-                  <br>
-                  <br>
+                  <br />
+                  <br />
                 </p>
                 <a
                   href="https://wa.me/5493498444635"
