borrando espacios en blanco de whatsapp

--- a/index.html
+++ b/index.html
@@ -601,13 +601,13 @@
                 class="collapse"
                 data-bs-target="#faq-list-1"
               >
-                ¿Qué puedo esperar de Magnética?
+                ¿Qué puedo esperar de Magnética?.
                 <i class="bx bx-chevron-down icon-show"></i>
                 <i class="bx bx-chevron-up icon-close"></i>
               </a>
               <div id="faq-list-1" class="collapse" data-bs-parent=".faq-list">
                 <p class="big-p">
-                  - Tener todo lo que tu empresa necesita en una sola agencia
+                  - Tener todo lo que tu empresa necesita en una sola agencia.
                 </p>
                 <p class="general-p">
                   Somos el área de comunicación que le hace falta a su empresa,
@@ -625,14 +625,14 @@
                 data-bs-target="#faq-list-2"
                 class="collapsed"
               >
-                ¿Brindan servicios para clientes internacionales?
+                ¿Brindan servicios para clientes internacionales?.
                 <i class="bx bx-chevron-down icon-show"></i>
                 <i class="bx bx-chevron-up icon-close"></i>
               </a>
               <div id="faq-list-2" class="collapse" data-bs-parent=".faq-list">
                 <p class="general-p">
                   Si, estamos preparados para trabajar con proyectos a nivel
-                  mundial
+                  mundial.
                 </p>
               </div>
             </li>
@@ -644,7 +644,7 @@
                 data-bs-target="#faq-list-3"
                 class="collapsed"
               >
-                ¿Dónde encuentro contenido gratuito?
+                ¿Dónde encuentro contenido gratuito?.
                 <i class="bx bx-chevron-down icon-show"></i>
                 <i class="bx bx-chevron-up icon-close"></i>
               </a>
@@ -652,7 +652,7 @@
                 <p class="general-p">
                   Suscríbete a nuestra comunidad y enterate de todas las
                   novedades. Podés encontrar todo el material en el menú
-                  “Comunidad”
+                  “Comunidad”.
                 </p>
               </div>
             </li>
@@ -664,7 +664,7 @@
                 data-bs-target="#faq-list-4"
                 class="collapsed"
               >
-                Quiero varios servicios, ¿Dónde puedo comprarlos?<i
+                Quiero varios servicios, ¿Dónde puedo comprarlos?.<i
                   class="bx bx-chevron-down icon-show"
                 ></i>
                 <i class="bx bx-chevron-up icon-close"></i>
@@ -673,7 +673,7 @@
                 <p class="general-p">
                   Completá el formulario y uno de nuestros asesores se
                   contactará con usted de inmediato para que podamos agendar una
-                  reunión personalizada :)
+                  reunión personalizada.
                 </p>
               </div>
             </li>
@@ -716,7 +716,7 @@
                   <i class="bi bi-phone flex-shrink-0"></i>
                   <div>
                     <h4>Teléfono:</h4>
-                    <p>+54 9 3498 44-4635</p>
+                    <p>+54 9 3498 44-4635</p>
                   </div>
                 </div>
                 <!-- End Info Item -->
@@ -729,7 +729,7 @@
                   <i class="bi bi-whatsapp flex-shrink-0"></i>
                   <div>
                     <h4>WhatsApp:</h4>
-                    <p>+54 9 3498 44-4635</p>
+                    <p>+54 9 3498 44-4635</p>
                   </div>
                 </a>
                 <!-- End Info Item -->
@@ -990,7 +990,7 @@
             <p>
               San Justo, Santa Fe<br />
               Argentina <br /><br />
-              <strong>Teléfono:</strong> +54 9 3498 44-4635<br />
+              <strong>Teléfono:</strong> +54 9 3498 44-4635<br />
               <strong>Email:</strong> magnetica@gmail.com<br />
             </p>
           </div>
