arreglo del descuento

--- a/redes-sociales.html
+++ b/redes-sociales.html
@@ -346,8 +346,10 @@
             </div>
             <!-- End packs-info Item -->
             <div class="packs-info-item position-relative mb-3">
-              <img class="descuento" src="./assets/img/servicios/Descuento.webp" alt="20% de descuento">
-              <h3 class="pe-4 mb-3 ">Edicion de videos Anual</h3>
+              <div>
+                <h3 class="pe-4 mb-3 ">Edicion de videos Anual</h3>
+                <img class="descuento" src="./assets/img/servicios/Descuento.webp" alt="20% de descuento">
+              </div>
               <p>
                 Accedes a un precio reducido por algo de mucho valor.
                 Eligiendo el pack anual ahorras un 20% de tu inversión por el mismo servicio.
@@ -382,8 +384,10 @@
             </div>
             <!-- End packs-info Item -->
             <div class="packs-info-item position-relative mb-3">
-              <img class="descuento" src="./assets/img/servicios/Descuento.webp" alt="20% de descuento">
-              <h3 class="pe-4">Manejo de RR.SS Anual</h3>
+              <div>
+                <h3 class="pe-4">Manejo de RR.SS Anual</h3>
+                <img class="descuento" src="./assets/img/servicios/Descuento.webp" alt="20% de descuento">
+              </div>
               <p>
                 Accedé a un descuento abonando el plan Anual.
                 Nuestros servicios están diseñados para
@@ -419,8 +423,10 @@
             </div>
             <!-- End packs-info Item -->
             <div class="packs-info-item position-relative mb-3">
-              <img class="descuento" src="./assets/img/servicios/Descuento.webp" alt="20% de descuento">
-              <h3 class="pe-4">Placas para RR.SS Anual</h3>
+              <div>
+                <h3 class="pe-4">Placas para RR.SS Anual</h3>
+                <img class="descuento" src="./assets/img/servicios/Descuento.webp" alt="20% de descuento">
+              </div>
               <p>
                 Accedé a un descuento abonando el plan Anual.
                 Ideal para las personas comprometidas con el
