arreglo de la navbar

--- a/index.html
+++ b/index.html
@@ -598,7 +598,7 @@
               <i class="bx bx-help-circle icon-help"></i>
               <a
                 data-bs-toggle="collapse"
-                class="collapse"
+                class="collapsed"
                 data-bs-target="#faq-list-1"
               >
                 ¿Qué puedo esperar de Magnética?.
